# resume_ai

./: README.md  SYSTEM_DESIGN.md
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
backend/routes/: resume_route.py
backend/schemas/: resume_schema.py
backend/services/: embedding_generator.py  highlight_generator.py  llm_analyzer.py  pdf_extractor.py  resume_service.py  scoring_engine.py  weaviate_manager.py
backend/utils/: logger.py
resume-ui/: package-lock.json  package.json
resume-ui/src/: ResumeAnalyzer.jsx
